--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h1><img src="https://learn.logikaschool.com/uploads/student/1717624/67a6018d4cd6b.jpg">Diamond Path</h1>
 <nav class="bebra">
            <a href=""><b>Why you can trust us</b></a>
-           <a href=""><b>Shop</b></a>
+           <a href="https://egor56864.github.io/shop/"><b>Shop</b></a>
            <a href="https://egor56864.github.io/golovna/"><b>Українська версія</b></a>
             </nav>
         </header>
