--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="kg"><img src="https://learn.logikaschool.com/uploads/student/1717624/67a603bf14a77.png">
             </div>
             <div class="ABOBA666"><p><b>The Diamond Path is a place where legends are born. In our store you will find exquisite gems from all over the world. From the brilliance of diamonds to the mysterious depth of sapphires, each stone carries a unique story. We will help you choose the perfect gem for jewelry, collection or a special gift. Discover the path to luxury and beauty with the Diamond Path! </b></p></div>
-            <div class="ABOBA777"><p><img src="https://learn.logikaschool.com/uploads/student/1717624/67b06f12ea00b.png"><b>SALE</b></p><p>COMPLECT OF GEMS WITH SALE 33%</p></div>
+            <div class="ABOBA777"><p><img src="https://learn.logikaschool.com/uploads/student/1717624/67b06f12ea00b.png"><b>SALE</b></p><p>COMPLECT OF DIAMONDS WITH SALE 33%</p></div>
             <a class="ABOBA888" href="">Shop</a>
             </main>
             <footer>
